--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,18 @@
 spring:
-  banner:
-    location: banner.txt
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-  sql:
-    init:
-      mode: always
-      data-locations: data.sql
-      schema-locations: schema.sql
-  h2:
-    console:
-      path: /h2-console
-      settings:
-        web-allow-others: true
+  data:
+    mongodb:
+      database: Lib
+      port: 27017
+      host: localhost
+      authentication-database: admin
+banner:
+  location: banner.txt
 
-  jpa:
-    generate-ddl: false
-    hibernate:
-      ddl-auto: none
+logging:
+  level:
+    org.springframework: ERROR
 
-    show-sql: true
-    properties:
-      javax:
-        persistence:
-          validation:
-            mode: none
-      hibernate:
-        enable_lazy_load_no_trans: true
-        dialect: org.hibernate.dialect.H2Dialect
-        ddl-auto: create-drop
+mongock:
+  runner-type: "InitializingBean"
+  change-logs-scan-package:
+    - ru.otus.homework.changeLog
