--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>jquery</artifactId>
+        <version>3.6.4</version>
+    </dependency>
+
+
     </dependencies>
 
     <build>
