--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,17 @@
     <groupId>ru.otus</groupId>
     <artifactId>homework</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>homework-6</name>
+    <name>homework-16</name>
     <description>Library</description>
-    <properties>
-        <java.version>11</java.version>
-    </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
