--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>jquery</artifactId>
@@ -104,6 +108,7 @@
             </configuration>
         </plugin>
         </plugins>
+        <finalName>lib-docker</finalName>
     </build>
 
 </project>
