--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,18 +2,10 @@ spring:
   banner:
     location: banner.txt
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-  sql:
-    init:
-      mode: always
-  h2:
-    console:
-      path: /h2-console
-      settings:
-        web-allow-others: true
-
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/db
+    username: postgres
+    password: postgres
   jpa:
     generate-ddl: false
     hibernate:
@@ -27,8 +19,11 @@ spring:
             mode: none
       hibernate:
         enable_lazy_load_no_trans: true
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect:  org.hibernate.dialect.PostgreSQLDialect
         ddl-auto: create-drop
+  sql:
+    init:
+      mode: always
 management:
   endpoints:
     web:
